conditionalize for local or cloud